Responsive, new actions and features added.

--- a/main.html
+++ b/main.html
@@ -36,7 +36,12 @@
               </button>
               <div id="dropdownMinutes" class="dropdown"></div>
             </div>
-            <button id="createBreakBtn" onclick="saveBreak()">Done</button>
+            <button class="breaksBtn" id="createBreakBtn" onclick="saveBreak()">
+              Done
+            </button>
+            <button class="breaksBtn" id="cancelBtn" onclick="cancelBreak()">
+              Cancel
+            </button>
           </div>
           <div id="breaksCreated"></div>
         </div>
